Adding tree query functionality.

--- a/phylofile/templates/master.html
+++ b/phylofile/templates/master.html
@@ -18,7 +18,7 @@
                 <li class="menuitem"><a href="/">Home</a></li>
                 <li class="menuitem"><a href="/about/">About</a></li>
                 <li class="menuitem"><a href="/trees/">Trees</a></li>
-                <li class="menuitem"><a href="/trees/query/">Query</a></li>
+                <li class="menuitem"><a href="/query/">Query</a></li>
                 <li class="menuitem"><a href="/contact/">Contact</a></li>
                 <li class="menuitem floatright" ><a href="/login/">Sign In</a></li>
             </ul>
