--- a/phylofile/static/master.css
+++ b/phylofile/static/master.css
@@ -166,6 +166,13 @@ textarea {
 width: 100%;
 }
 
-p.errors {
+ul.errorlist li {
 color:#f00;
+font-weight: bold;
+padding-top: 10px;
+padding-bottom: 10px;
+}
+
+label {
+font-weight: bold;
 }
