--- a/phylofile/templates/contributors.html
+++ b/phylofile/templates/contributors.html
@@ -8,6 +8,59 @@
 
 {% block content %}
 
-Hello, world!
+<table>
+    <thead>
+        <td><strong>Name</strong></td>
+        <td><strong>Role</strong></td>
+    </thead>
+    <tr>
+        <td>
+            Ben Morris<br/>
+            (<a href='mailto:ben@bendmorris.com'>mail</a>,
+            <a href='http://www.bendmorris.com'>web</a>)
+        </td>
+        <td>Lead developer</td>
+    </tr>
+    
+    <tr>
+        <td>Hilmar Lapp</td>
+        <td>Project advisor</td>
+    </tr>
+    
+    <tr>
+        <td>
+            Jim Balhoff, <br/>
+            Karen Cranston, <br/>
+            Mark Holder, <br/>
+            Enrico Pontelli
+        </td>
+        <td>
+            Conception/implementation of an RDF-based treestore.
+        </td>
+    </tr>
+    
+    <tr>
+        <td>
+            Joachim Baran, <br/>
+            Hilmar Lapp, <br/>
+            Enrico Pontelli, <br/>
+            Arlin Stoltzfus, <br/>
+            Andrea Thomer, <br/>
+            Ramona Walls
+        </td>
+        <td>
+            Annotation of trees and design of an annotation pipeline.
+        </td>
+    </tr>
+</table>
+
+<br/><br/>
+
+<p>
+    The development of PhyloFile was supported by the 
+    <a href='http://www.nescent.org'>National Evolutionary Synthesis Center (NESCent)</a>
+    and includes components developed at two
+    <a href='http://www.phylotastic.org'>Phylotastic</a> hackathons.
+</p>
 
 {% endblock %}
