--- a/phylofile/templates/tree_menu.html
+++ b/phylofile/templates/tree_menu.html
@@ -1,4 +1,4 @@
 <li><a href="/">Home</a></li>
-<li><a href="/trees/">List of Trees</a></li>
-<li><a href="/trees/add/">Add Tree</a></li>
+<li><a href="/trees/">List of trees</a></li>
+<li><a href="/trees/add/">Add a tree</a></li>
 <li><a href="/query/">Query</a></li>
