--- a/trees/templates/view.html
+++ b/trees/templates/view.html
@@ -14,8 +14,7 @@
 
 <br/><br/>
 
-<table style='width:100%'>
-
+<table>
     <tr><td><strong>URI</strong></td><td>
     {{tree_uri}}
     </td></tr>
