--- a/phylofile/templates/contact.html
+++ b/phylofile/templates/contact.html
@@ -8,6 +8,9 @@
 
 {% block content %}
 
-Hello, world!
+<p>
+    Queries regarding PhyloFile should be directed to 
+    <a href='mailto:ben@bendmorris.com'>Ben Morris</a>.
+</p>
 
 {% endblock %}
