Separating out tree upload functionality into separate app for simplicity.

--- a/phylofile/templates/contact.html
+++ b/phylofile/templates/contact.html
@@ -9,7 +9,7 @@
 {% block content %}
 
 <p>
-    Queries regarding PhyloFile should be directed to 
+    Please send your questions or feedback to
     <a href='mailto:ben@bendmorris.com'>Ben Morris</a>.
 </p>
 
