--- a/phylofile/templates/contributors.html
+++ b/phylofile/templates/contributors.html
@@ -32,6 +32,7 @@
             Jim Balhoff, <br/>
             Karen Cranston, <br/>
             Mark Holder, <br/>
+            Hilmar Lapp, <br/>
             Enrico Pontelli
         </td>
         <td>
