Basic authentication UI.

--- a/phylofile/templates/contributors.html
+++ b/phylofile/templates/contributors.html
@@ -14,7 +14,7 @@
         <td><strong>Role</strong></td>
     </thead>
     <tr>
-        <td>
+        <td width=25%>
             Ben Morris<br/>
             (<a href='mailto:ben@bendmorris.com'>mail</a>,
             <a href='http://www.bendmorris.com'>web</a>)
@@ -36,7 +36,7 @@
             Enrico Pontelli
         </td>
         <td>
-            Conception/implementation of an RDF-based treestore.
+            Conception/implementation of an RDF-based treestore. (Phylotastic 1)
         </td>
     </tr>
     
@@ -50,7 +50,23 @@
             Ramona Walls
         </td>
         <td>
-            Annotation of trees and design of an annotation pipeline.
+            Annotation of trees and design of an annotation pipeline. (Phylotastic 2)
+        </td>
+    </tr>
+    
+    <tr>
+        <td>
+            Karen Cranston, <br/>
+            Cody Hinchliff, <br/>
+            Mark Holder, <br/>
+            Naim Matasci, <br/>
+            Ben Morris, <br/>
+            Shannon Oliver, <br/>
+            Rutger Vos, <br/>
+            Derrick Zwicki
+        </td>
+        <td>
+            Design of phylogenetic database communication standards and architecture. (Phylotastic 2)
         </td>
     </tr>
 </table>
