--- a/phylofile/templates/master.html
+++ b/phylofile/templates/master.html
@@ -20,7 +20,19 @@
                 <li class="menuitem"><a href="/trees/">Trees</a></li>
                 <li class="menuitem"><a href="/query/">Query</a></li>
                 <li class="menuitem"><a href="/contact/">Contact</a></li>
-                <li class="menuitem floatright" ><a href="/login/">Sign In</a></li>
+                <li class="menuitem floatright" >
+                {% if request.user.is_authenticated %}
+                    <a href=''>{{ request.user.username }}</a>
+                    {% if request.user.is_staff %}
+                    <a href="/admin/">admin</a>
+                    {% endif %}
+                    <a href="/logout/">logout</a>
+                {% else %}
+                    <a href="/register/">Register</a>
+                    <a href="/login?next={{request.path}}">Sign In</a>
+                {% endif %}
+                    
+                </li>
             </ul>
         </div>
 
