Don't really need a separate 'about' and 'home' page. Combining.

--- a/phylofile/templates/master.html
+++ b/phylofile/templates/master.html
@@ -15,8 +15,7 @@
 
         <div id="menu">
             <ul>
-                <li class="menuitem"><a href="/">Home</a></li>
-                <li class="menuitem"><a href="/about/">About</a></li>
+                <li class="menuitem"><a href="/">About</a></li>
                 <li class="menuitem"><a href="/trees/">Trees</a></li>
                 <li class="menuitem"><a href="/query/">Query</a></li>
                 <li class="menuitem"><a href="/contact/">Contact</a></li>
