--- a/phylofile/templates/about.html
+++ b/phylofile/templates/about.html
@@ -17,11 +17,19 @@
 <p>
     PhyloFile uses semantic web technologies including RDF to enable quick, efficient 
     reuse of trees. PhyloFile leverages the open source 
-    <a href='biopython.org'>BioPython project</a> to convert trees in various 
+    <a href='http://biopython.org'>BioPython project</a> to convert trees in various 
     formats into RDF. These trees are then stored in Virtuoso, a database optized 
     for RDF storage. This makes common tasks such as querying for specific trees 
     based on metadata (year published, reconstruction method) or creating subtrees 
     from a list of taxa very efficient.
+</p>
+<p>
+    <strong>Make PhyloFile better</strong> - you can contribute to PhyloFile by:
+    <ul>
+        <li><a href='{% url add %}'>Submitting new trees</a></li>
+        <li><a href='{% url list %}'>Adding or correcting metadata on existing trees</a></li>
+        <li><a href='https://github.com/bendmorris/phylofile/issues' target='_blank'>Suggesting enhancements or reporting bugs</a></li>
+    </ul>
 </p>
 <p>
     PhyloFile builds on tools that were developed at two
