--- a/phylofile/templates/home_menu.html
+++ b/phylofile/templates/home_menu.html
@@ -1,5 +1,4 @@
-<li><a href="/">Home</a></li>
-<li><a href="/about/">About</a></li>
+<li><a href="/">About</a></li>
 <li><a href="/contributors/">Contributors</a></li>
 <li><a href="https://github.com/bendmorris/phylofile/" target="_blank">Source</a></li>
 <li><a href="/contact/">Contact</a></li>
