--- a/phylofile/templates/about.html
+++ b/phylofile/templates/about.html
@@ -1,6 +1,6 @@
 {% extends "master.html" %}
 
-{% block title %}About - PhyloFile{% endblock %}
+{% block title %}PhyloFile, a community phylogenetic database{% endblock %}
 
 {% block leftmenu %}
 {% include "home_menu.html" %}
