--- a/phylofile/templates/tree_menu.html
+++ b/phylofile/templates/tree_menu.html
@@ -1,3 +1,3 @@
 <li><a href="/trees/">List of trees</a></li>
-<li><a href="/trees/add/">Add a tree</a></li>
+<li><a href="/trees/add/">Submit a tree</a></li>
 <li><a href="/query/">Query</a></li>
