--- a/treeupload/templates/add.html
+++ b/treeupload/templates/add.html
@@ -1,6 +1,6 @@
 {% extends "master.html" %}
 
-{% block title %}Add Trees - PhyloFile{% endblock %}
+{% block title %}Submit a Tree - PhyloFile{% endblock %}
 
 {% block leftmenu %}
 {% include "tree_menu.html" %}
