--- a/phylofile/templates/master.html
+++ b/phylofile/templates/master.html
@@ -49,7 +49,7 @@
         </div>
         
         <div id="footer">
-            (C) 2013 <a href='http://www.nescent.org'>National Evolutionary Synthesis Center</a>
+            &copy; 2013 <a href='http://www.nescent.org'>National Evolutionary Synthesis Center</a>
         </div>
        
     </div>
