Adding django.registration and django.profiles apps for user account creation/profile editing.

--- a/phylofile/static/master.css
+++ b/phylofile/static/master.css
@@ -166,7 +166,7 @@ table thead {
 font-weight: bold;
 }
 
-input[type="text"], textarea, select {
+td input[type="text"], td textarea, td select {
 width: 100%;
 }
 
