--- a/phylofile/templates/profiles/edit_profile.html
+++ b/phylofile/templates/profiles/edit_profile.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "master.html" %}
 {% block title %}Edit Profile - PhyloFile{% endblock %}
  
 {% block leftmenu %}
@@ -8,7 +8,7 @@
 {% block content %}
 <h1>Edit contact info for {{ user }}</h1>
 <form action="" method="POST">
-{% csfr_token %}
+{% csrf_token %}
 {{ form }} 
 <input id="submit" type="submit" name="submit" value="Update" />
 </form>
