--- a/phylofile/templates/master.html
+++ b/phylofile/templates/master.html
@@ -21,7 +21,7 @@
                 <li class="menuitem"><a href="/contact/">Contact</a></li>
                 <li class="menuitem floatright" >
                 {% if request.user.is_authenticated %}
-                    <a href='/profile/{{request.user.username}}/'>{{ request.user.username }}</a>
+                    <a href='/profiles/{{request.user.username}}/'>{{ request.user.username }}</a>
                     {% if request.user.is_staff %}
                     <a href="/admin/">admin</a>
                     {% endif %}
