--- a/phylofile/templates/profiles/edit_profile.html
+++ b/phylofile/templates/profiles/edit_profile.html
@@ -9,7 +9,7 @@
 <h1>Edit contact info for {{ user }}</h1>
 <form action="" method="POST">
 {% csrf_token %}
-{{ form }} 
+{{ form.as_p }} 
 <input id="submit" type="submit" name="submit" value="Update" />
 </form>
  
