Minor stylistic changes.

--- a/phylofile/templates/profiles/edit_profile.html
+++ b/phylofile/templates/profiles/edit_profile.html
@@ -6,10 +6,10 @@
 {% endblock %}
  
 {% block content %}
-<h1>Edit contact info for {{ user }}</h1>
+<p><label>Username:</label> {{ user }}</p>
 <form action="" method="POST">
 {% csrf_token %}
-{{ form.as_p }} 
+{{ form.as_p }}
 <input id="submit" type="submit" name="submit" value="Update" />
 </form>
  
