Adding clarification about OTU underscores.

--- a/treequery/templates/query.html
+++ b/treequery/templates/query.html
@@ -70,6 +70,8 @@
         Enter a comma-separated list of taxa from which to generate a tree.
         (If you only enter a single taxon and choose not to prune, you can
         get a tree containing that taxon and all of its descendents.)
+        Don't use underscores; PhyloFile automatically converts underscores
+        to spaces in submitted trees.
     </p>
     
     <p>
