--- a/treeupload/templates/uploads.html
+++ b/treeupload/templates/uploads.html
@@ -20,7 +20,8 @@
             <td>Action</td>
         </thead>
     {% for file in files %}
-        <form action='/trees/uploads/approve/{{ file.id }}/' method='POST'>
+        <form action='/trees/uploads/{{ file.id }}/' method='POST'>
+        
         {% csrf_token %}
         <tr>
             <td>
@@ -40,19 +41,21 @@
             </td>
             <td>
                 {{ file.tree_file_name }}
-                (<a href='/trees/uploads/view/{{ file.id }}/'>view</a>)
                 {% if request.user.username == file.uploaded_by.username or deleter %}
-                (<a href='/trees/uploads/delete/{{ file.id }}/'>delete</a>)
                 {% endif %}
             </td>
             <td>
                 {{ file.tree_file_size }}
             </td>
             <td>
-                <input type='submit' name='action' value='Approve' /></br>
-                <input type='submit' name='action' value='Reject' /></br>
+                <input type='submit' name='action' value='View file' /><br/>
+                <input type='submit' name='action' value='Test file' /><br/>
+                <input type='submit' name='action' value='Approve' /><br/>
+                <input type='submit' name='action' value='Reject' /><br/>
             </td>
         </tr>
+        
+        </form>
     {% endfor %}
     </table>
     
