--- a/phylofile/templates/tree_menu.html
+++ b/phylofile/templates/tree_menu.html
@@ -1,3 +1,6 @@
 <li><a href="/trees/">List of trees</a></li>
 <li><a href="/trees/add/">Submit a tree</a></li>
 <li><a href="/query/">Query</a></li>
+{% if request.user.is_staff %}
+<li class='admin'><a href="/trees/uploads/">Uploads</a></li>
+{% endif %}
