--- a/phylocommons/templates/contact.html
+++ b/phylocommons/templates/contact.html
@@ -1,6 +1,6 @@
 {% extends "master.html" %}
 
-{% block title %}Contact Us - PhyloFile{% endblock %}
+{% block title %}Contact Us - PhyloCommons{% endblock %}
 
 {% block leftmenu %}
 {% include "home_menu.html" %}
