--- a/phylocommons/templates/contributors.html
+++ b/phylocommons/templates/contributors.html
@@ -1,6 +1,6 @@
 {% extends "master.html" %}
 
-{% block title %}Contributors - PhyloFile{% endblock %}
+{% block title %}Contributors - PhyloCommons{% endblock %}
 
 {% block leftmenu %}
 {% include "home_menu.html" %}
@@ -74,7 +74,7 @@
 <br/><br/>
 
 <p>
-    The development of PhyloFile was supported by the 
+    The development of PhyloCommons was supported by the 
     <a href='http://www.nescent.org'>National Evolutionary Synthesis Center (NESCent)</a>
     and includes components developed at two
     <a href='http://www.phylotastic.org'>Phylotastic</a> hackathons.
