--- a/phylocommons/templates/master.html
+++ b/phylocommons/templates/master.html
@@ -9,7 +9,7 @@
 <body>
     <div id="page">
         <div id="header">
-            <a href='/'><h1>Phylo<span class="blue">File</span></h1></a>
+            <a href='/'><h1>Phylo<span class="blue">Commons</span></h1></a>
             <a href='/'><img src='/static/nescent_logo.png' alt='NESCent'/></a>
         </div>
 
