Removing more references to phylofile.

--- a/phylocommons/templates/profiles/edit_profile.html
+++ b/phylocommons/templates/profiles/edit_profile.html
@@ -1,5 +1,5 @@
 {% extends "master.html" %}
-{% block title %}Edit Profile - PhyloFile{% endblock %}
+{% block title %}Edit Profile - PhyloCommons{% endblock %}
  
 {% block leftmenu %}
 {% include "home_menu.html" %}
