--- a/treeupload/templates/thankyou.html
+++ b/treeupload/templates/thankyou.html
@@ -1,6 +1,6 @@
 {% extends "master.html" %}
 
-{% block title %}Thank you! - PhyloFile{% endblock %}
+{% block title %}Thank you! - PhyloCommons{% endblock %}
 
 {% block leftmenu %}
 {% include "tree_menu.html" %}
@@ -13,7 +13,7 @@
 </p>
 <p>
     Your submission will be reviewed by the moderators and should show up in 
-    the PhyloFile database soon. You'll receive a notification when it's ready.
+    the PhyloCommons database soon. You'll receive a notification when it's ready.
     If there are any issues that we can't resolve, we'll be in touch using the
     e-mail address listed for your account.
 </p>
