--- a/treeupload/templates/uploads.html
+++ b/treeupload/templates/uploads.html
@@ -1,6 +1,6 @@
 {% extends "master.html" %}
 
-{% block title %}Uploaded Trees - PhyloFile{% endblock %}
+{% block title %}Uploaded Trees - PhyloCommons{% endblock %}
 
 {% block leftmenu %}
 {% include "tree_menu.html" %}
