--- a/treeview/templates/list.html
+++ b/treeview/templates/list.html
@@ -1,6 +1,6 @@
 {% extends "master.html" %}
 
-{% block title %}List of Trees - PhyloFile{% endblock %}
+{% block title %}List of Trees - PhyloCommons{% endblock %}
 
 {% block leftmenu %}
 {% include "tree_menu.html" %}
