--- a/treeview/templates/view.html
+++ b/treeview/templates/view.html
@@ -1,6 +1,6 @@
 {% extends "master.html" %}
 
-{% block title %}{{tree_id}} - PhyloFile{% endblock %}
+{% block title %}{{tree_id}} - PhyloCommons{% endblock %}
 
 {% block leftmenu %}
 {% include "tree_menu.html" %}
