--- a/phylocommons/templates/master.html
+++ b/phylocommons/templates/master.html
@@ -3,6 +3,9 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>{% block title %}{% endblock %}</title>
+    <link href="/static/bootstrap.min.css" rel="stylesheet" media="screen">
+    <script src="/static/jquery-1.8.1.min.js"></script>
+    <script src="/static/bootstrap.min.js"></script>
     <link href="/static/master.css" rel="stylesheet" type="text/css" />
 </head>
 
