Minor changes to treeupload.

--- a/treeupload/templates/add.html
+++ b/treeupload/templates/add.html
@@ -17,6 +17,7 @@
         <tr><td>
             <label for='q'>Tree ID</label>
         </td><td>
+            {{ tree_uri }}
             {{ form.tree_id }}
             {{ form.tree_id.errors }}
         </td></tr>
